Fix the width at which the nav bar collapses into a menu.

--- a/ui/modules/nav_bar/main.less
+++ b/ui/modules/nav_bar/main.less
@@ -60,7 +60,7 @@
   }
 }
 
-@media(min-width: 875px) {
+@media(min-width: 1024px) {
   #navigation_button {
     display: none;
   }
@@ -82,7 +82,7 @@
   }
 }
 
-@media(max-width: 874px) {
+@media(max-width: 1023px) {
   #navigation_bar {
     position: static !important;
   }
